# data-analyse

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_initial_core_tables.py  20260704_0002_cleaning_recipes.py  20260704_0003_data_views.py  20260704_0004_task_retry_payload.py  20260704_0005_import_staging_and_dataset_quality.py  20260704_0006_external_database_connections.py  20260716_0007_external_connection_lifecycle.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/audit/: __init__.py  repository.py  service.py
backend/app/auth/: dependencies.py  repository.py  schemas.py  service.py
backend/app/cleaning/: __init__.py  repository.py  schemas.py  service.py
backend/app/core/: config.py  database.py  errors.py  secrets.py  sql_safety.py
backend/app/data_sources/: __init__.py  connectors.py  repository.py  schemas.py  service.py
backend/app/data_views/: __init__.py  repository.py  schemas.py  service.py
backend/app/datasets/: materializer.py  schemas.py  (+2 more)
backend/tests/: conftest.py  test_auth_projects_permissions.py  test_cleaning.py  test_collaboration_repositories.py  test_config.py  test_data_sources.py  test_data_views.py  test_database.py  test_errors.py  test_file_import.py  test_health.py  test_import_dataset_repositories.py  test_import_streaming.py  test_models_metadata.py  test_sql_workspace.py  test_tasks.py  test_visualizations.py
(+117 files in other folders)
