[project]
name = "data-analysis-system-backend"
version = "0.1.0"
description = "FastAPI backend for the Data Analysis System."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "cryptography>=45.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.0,<0.139.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
    "pydantic-settings>=2.11.0",
    "pymysql>=1.1.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
